# deepagents-local-sandbox

./: README.md  pyproject.toml
deepagents_local_sandbox/: __init__.py  detect.py
deepagents_local_sandbox/providers/: bubblewrap_sandbox.py  docker_sandbox.py
examples/code-runner-agent/: AGENTS.md  README.md  code_runner.py  pyproject.toml  subagents.yaml
examples/code-runner-agent/skills/execute-code/: SKILL.md
tests/: conftest.py  test_bubblewrap_sandbox.py  test_detect.py  test_docker_sandbox.py
